// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a ButtonDialog control 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#004358",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-button-dialog test-class"
  >
    <Button
      className=""
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      iconName="bomb"
      iconStyle=""
      id=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onClick={[Function]}
      selected={false}
      sizing="normal"
      style={
        Object {
          "backgroundColor": "inherit",
          "color": "inherit",
          "fill": "white",
          "stroke": "black",
        }
      }
      testing={true}
      theme={Object {}}
      tooltip=""
      visible={true}
      width=""
      xcss={null}
    />
    <styled.div
      className="ui-dialog-popup test-class-dialog"
      location="bottom"
      onClick={[Function]}
      visible={false}
    >
      <styled.div
        sizing="normal"
        visible={false}
      >
        <p>
          Dialog test
        </p>
      </styled.div>
      <Styled(Triangle)
        className=""
        direction="up"
        location="bottom"
        nobase={true}
        sizing="normal"
        style={
          Object {
            "fill": undefined,
            "stroke": undefined,
          }
        }
        visible={false}
      />
    </styled.div>
  </styled.div>
</ThemeProvider>
`;

exports[`Test creation of a ButtonDialog control on top 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#004358",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-button-dialog test-class"
  >
    <Button
      className=""
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      iconName="bomb"
      iconStyle=""
      id=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onClick={[Function]}
      selected={false}
      sizing="normal"
      style={
        Object {
          "backgroundColor": "inherit",
          "color": "inherit",
          "fill": "white",
          "stroke": "black",
        }
      }
      testing={true}
      theme={Object {}}
      tooltip=""
      visible={true}
      width=""
      xcss={null}
    />
    <styled.div
      className="ui-dialog-popup test-class-dialog"
      location="top"
      onClick={[Function]}
      visible={false}
    >
      <styled.div
        sizing="normal"
        visible={false}
      >
        <p>
          Dialog test
        </p>
      </styled.div>
      <Styled(Triangle)
        className=""
        direction="down"
        location="top"
        nobase={true}
        sizing="normal"
        style={
          Object {
            "fill": undefined,
            "stroke": undefined,
          }
        }
        visible={false}
      />
    </styled.div>
  </styled.div>
</ThemeProvider>
`;

exports[`Test making the ButtonDialog invisible 1`] = `
<ButtonDialog
  className=""
  contentEditable={false}
  dialogClasses={Array []}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  iconName="bomb"
  iconStyle=""
  id=""
  location="bottom"
  noedit={false}
  nohover={false}
  noripple={false}
  notriangle={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "inherit",
      "color": "inherit",
    }
  }
  testing={true}
  theme={Object {}}
  tooltip=""
  triangleClasses={Array []}
  visible={false}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-button-dialog"
    >
      <div
        className="ui-button-dialog sc-EHOje hgeHxC"
      >
        <Button
          className=""
          contentEditable={false}
          direction="right"
          disabled={false}
          focus={false}
          height=""
          iconName="bomb"
          iconStyle=""
          id=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          onClick={[Function]}
          selected={false}
          sizing="normal"
          style={
            Object {
              "backgroundColor": "inherit",
              "color": "inherit",
              "fill": "white",
              "stroke": "black",
            }
          }
          testing={true}
          theme={Object {}}
          tooltip=""
          visible={false}
          width=""
          xcss={null}
        >
          <ThemeProvider
            theme={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#004358",
                "color": "#000000",
                "headerBackgroundColor": "#004358",
                "headerForegroundColor": "#ffffff",
                "headerHoverColor": "#ffe11a",
                "hoverColor": "#c0c0c0",
                "inputBorderColor": "#c0c0c0",
                "transitionDelay": "0.5s",
              }
            }
          >
            <styled.div
              className="ui-button ripple"
              disabled={false}
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "inherit",
                  "color": "inherit",
                  "fill": "white",
                  "stroke": "black",
                }
              }
              visible={false}
            >
              <div
                className="ui-button ripple sc-htpNat obZDX"
                disabled={false}
                onClick={[Function]}
                style={
                  Object {
                    "backgroundColor": "inherit",
                    "color": "inherit",
                    "fill": "white",
                    "stroke": "black",
                  }
                }
              >
                <Icon
                  className=""
                  contentEditable={false}
                  direction="right"
                  disabled={false}
                  focus={false}
                  height=""
                  iconName="bomb"
                  id=""
                  imageFile=""
                  location="none"
                  noedit={false}
                  nohover={false}
                  noripple={false}
                  selected={false}
                  sizing="normal"
                  style={Object {}}
                  testing={true}
                  theme={Object {}}
                  tooltip=""
                  visible={true}
                  width=""
                  xcss={null}
                >
                  <ThemeProvider
                    theme={
                      Object {
                        "backgroundColor": "#ffffff",
                        "borderColor": "#004358",
                        "color": "#000000",
                        "headerBackgroundColor": "#004358",
                        "headerForegroundColor": "#ffffff",
                        "headerHoverColor": "#ffe11a",
                        "hoverColor": "#c0c0c0",
                        "inputBorderColor": "#c0c0c0",
                        "transitionDelay": "0.5s",
                      }
                    }
                  >
                    <styled.i
                      className="ui-icon fa fa-fw fa-bomb"
                      contentEditable={false}
                      direction="right"
                      disabled={false}
                      focus={false}
                      height=""
                      iconName="bomb"
                      id=""
                      imageFile=""
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      theme={Object {}}
                      tooltip=""
                      visible={true}
                      width=""
                      xcss={null}
                    >
                      <i
                        className="ui-icon fa fa-fw fa-bomb sc-bdVaJa rkmGs"
                        contentEditable={false}
                        direction="right"
                        disabled={false}
                        height=""
                        id=""
                        selected={false}
                        style={Object {}}
                        width=""
                      />
                    </styled.i>
                  </ThemeProvider>
                </Icon>
              </div>
            </styled.div>
          </ThemeProvider>
        </Button>
        <styled.div
          className="ui-dialog-popup"
          location="bottom"
          onClick={[Function]}
          visible={false}
        >
          <div
            className="ui-dialog-popup sc-ifAKCX flWXbT"
            onClick={[Function]}
          >
            <styled.div
              sizing="normal"
              visible={false}
            >
              <div
                className="sc-bxivhb cQXLOg"
              >
                <p>
                  Dialog test
                </p>
              </div>
            </styled.div>
            <Styled(Triangle)
              className=""
              direction="up"
              location="bottom"
              nobase={true}
              sizing="normal"
              style={
                Object {
                  "fill": undefined,
                  "stroke": undefined,
                }
              }
              visible={false}
            >
              <Triangle
                className="sc-bZQynM gQorj"
                contentEditable={false}
                direction="up"
                disabled={false}
                focus={false}
                height=""
                id=""
                location="bottom"
                nobase={true}
                noedit={false}
                nohover={false}
                noripple={false}
                selected={false}
                sizing="normal"
                style={
                  Object {
                    "fill": undefined,
                    "stroke": undefined,
                  }
                }
                testing={true}
                theme={Object {}}
                tooltip=""
                visible={false}
                width=""
                xcss={null}
              >
                <ThemeProvider
                  theme={
                    Object {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#004358",
                      "color": "#000000",
                      "headerBackgroundColor": "#004358",
                      "headerForegroundColor": "#ffffff",
                      "headerHoverColor": "#ffe11a",
                      "hoverColor": "#c0c0c0",
                      "inputBorderColor": "#c0c0c0",
                      "transitionDelay": "0.5s",
                    }
                  }
                >
                  <Triangle__SVGView
                    className="ui-triangle sc-bZQynM gQorj"
                    contentEditable={false}
                    direction="up"
                    disabled={false}
                    focus={false}
                    height=""
                    id=""
                    location="bottom"
                    nobase={true}
                    noedit={false}
                    nohover={false}
                    noripple={false}
                    preserveAspectRatio="xMidYMid meet"
                    selected={false}
                    sizing="normal"
                    style={
                      Object {
                        "fill": undefined,
                        "stokeWidth": "2px",
                        "stroke": undefined,
                      }
                    }
                    testing={true}
                    theme={Object {}}
                    tooltip=""
                    version="1.1"
                    viewBox="0 0 40 40"
                    visible={false}
                    width=""
                    xcss={null}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <svg
                      className="ui-triangle sc-bZQynM gQorj Triangle__SVGView-bGJaTC kCZOgc"
                      contentEditable={false}
                      direction="up"
                      disabled={false}
                      height=""
                      id=""
                      preserveAspectRatio="xMidYMid meet"
                      selected={false}
                      style={
                        Object {
                          "fill": undefined,
                          "stokeWidth": "2px",
                          "stroke": undefined,
                        }
                      }
                      version="1.1"
                      viewBox="0 0 40 40"
                      width=""
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <polygon
                        points="-3,35, 20,10 43,35"
                        style={
                          Object {
                            "stroke": "none",
                          }
                        }
                      />
                      <polygon
                        points="-3,35, 20,10 43,35, 20,10"
                        style={
                          Object {
                            "strokeLinecap": "square",
                            "strokeWidth": undefined,
                          }
                        }
                      />
                    </svg>
                  </Triangle__SVGView>
                </ThemeProvider>
              </Triangle>
            </Styled(Triangle)>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </ThemeProvider>
</ButtonDialog>
`;

exports[`Test retrieval of ButtonDialog props object 1`] = `
Object {
  "className": "",
  "contentEditable": false,
  "dialogClasses": Array [],
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "iconName": "bomb",
  "iconStyle": "",
  "id": "",
  "location": "bottom",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "notriangle": false,
  "onClick": [Function],
  "selected": false,
  "sizing": "normal",
  "style": Object {
    "backgroundColor": "inherit",
    "color": "inherit",
  },
  "testing": true,
  "theme": Object {},
  "tooltip": "",
  "triangleClasses": Array [],
  "visible": true,
  "width": "",
  "xcss": null,
}
`;

exports[`Test the disabling of the ButtonDialog control 1`] = `
<ButtonDialog
  className=""
  contentEditable={false}
  dialogClasses={Array []}
  direction="right"
  disabled={true}
  focus={false}
  height=""
  iconName="bomb"
  iconStyle=""
  id=""
  location="bottom"
  noedit={false}
  nohover={false}
  noripple={false}
  notriangle={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "inherit",
      "color": "inherit",
    }
  }
  testing={true}
  theme={Object {}}
  tooltip=""
  triangleClasses={Array []}
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-button-dialog"
    >
      <div
        className="ui-button-dialog sc-EHOje hgeHxC"
      >
        <Button
          className=""
          contentEditable={false}
          direction="right"
          disabled={true}
          focus={false}
          height=""
          iconName="bomb"
          iconStyle=""
          id=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          onClick={[Function]}
          selected={false}
          sizing="normal"
          style={
            Object {
              "backgroundColor": "inherit",
              "color": "inherit",
              "fill": "white",
              "stroke": "black",
            }
          }
          testing={true}
          theme={Object {}}
          tooltip=""
          visible={true}
          width=""
          xcss={null}
        >
          <ThemeProvider
            theme={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#004358",
                "color": "#000000",
                "headerBackgroundColor": "#004358",
                "headerForegroundColor": "#ffffff",
                "headerHoverColor": "#ffe11a",
                "hoverColor": "#c0c0c0",
                "inputBorderColor": "#c0c0c0",
                "transitionDelay": "0.5s",
              }
            }
          >
            <styled.div
              className="ui-button nohover"
              disabled={true}
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "inherit",
                  "color": "inherit",
                  "fill": "white",
                  "stroke": "black",
                }
              }
              visible={true}
            >
              <div
                className="ui-button nohover sc-htpNat cDPcSb"
                disabled={true}
                onClick={[Function]}
                style={
                  Object {
                    "backgroundColor": "inherit",
                    "color": "inherit",
                    "fill": "white",
                    "stroke": "black",
                  }
                }
              >
                <Icon
                  className=""
                  contentEditable={false}
                  direction="right"
                  disabled={false}
                  focus={false}
                  height=""
                  iconName="bomb"
                  id=""
                  imageFile=""
                  location="none"
                  noedit={false}
                  nohover={false}
                  noripple={false}
                  selected={false}
                  sizing="normal"
                  style={Object {}}
                  testing={true}
                  theme={Object {}}
                  tooltip=""
                  visible={true}
                  width=""
                  xcss={null}
                >
                  <ThemeProvider
                    theme={
                      Object {
                        "backgroundColor": "#ffffff",
                        "borderColor": "#004358",
                        "color": "#000000",
                        "headerBackgroundColor": "#004358",
                        "headerForegroundColor": "#ffffff",
                        "headerHoverColor": "#ffe11a",
                        "hoverColor": "#c0c0c0",
                        "inputBorderColor": "#c0c0c0",
                        "transitionDelay": "0.5s",
                      }
                    }
                  >
                    <styled.i
                      className="ui-icon fa fa-fw fa-bomb"
                      contentEditable={false}
                      direction="right"
                      disabled={false}
                      focus={false}
                      height=""
                      iconName="bomb"
                      id=""
                      imageFile=""
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      theme={Object {}}
                      tooltip=""
                      visible={true}
                      width=""
                      xcss={null}
                    >
                      <i
                        className="ui-icon fa fa-fw fa-bomb sc-bdVaJa rkmGs"
                        contentEditable={false}
                        direction="right"
                        disabled={false}
                        height=""
                        id=""
                        selected={false}
                        style={Object {}}
                        width=""
                      />
                    </styled.i>
                  </ThemeProvider>
                </Icon>
              </div>
            </styled.div>
          </ThemeProvider>
        </Button>
        <styled.div
          className="ui-dialog-popup"
          location="bottom"
          onClick={[Function]}
          visible={false}
        >
          <div
            className="ui-dialog-popup sc-ifAKCX flWXbT"
            onClick={[Function]}
          >
            <styled.div
              sizing="normal"
              visible={false}
            >
              <div
                className="sc-bxivhb cQXLOg"
              >
                <p>
                  Dialog test
                </p>
              </div>
            </styled.div>
            <Styled(Triangle)
              className=""
              direction="up"
              location="bottom"
              nobase={true}
              sizing="normal"
              style={
                Object {
                  "fill": undefined,
                  "stroke": undefined,
                }
              }
              visible={false}
            >
              <Triangle
                className="sc-bZQynM gQorj"
                contentEditable={false}
                direction="up"
                disabled={false}
                focus={false}
                height=""
                id=""
                location="bottom"
                nobase={true}
                noedit={false}
                nohover={false}
                noripple={false}
                selected={false}
                sizing="normal"
                style={
                  Object {
                    "fill": undefined,
                    "stroke": undefined,
                  }
                }
                testing={true}
                theme={Object {}}
                tooltip=""
                visible={false}
                width=""
                xcss={null}
              >
                <ThemeProvider
                  theme={
                    Object {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#004358",
                      "color": "#000000",
                      "headerBackgroundColor": "#004358",
                      "headerForegroundColor": "#ffffff",
                      "headerHoverColor": "#ffe11a",
                      "hoverColor": "#c0c0c0",
                      "inputBorderColor": "#c0c0c0",
                      "transitionDelay": "0.5s",
                    }
                  }
                >
                  <Triangle__SVGView
                    className="ui-triangle sc-bZQynM gQorj"
                    contentEditable={false}
                    direction="up"
                    disabled={false}
                    focus={false}
                    height=""
                    id=""
                    location="bottom"
                    nobase={true}
                    noedit={false}
                    nohover={false}
                    noripple={false}
                    preserveAspectRatio="xMidYMid meet"
                    selected={false}
                    sizing="normal"
                    style={
                      Object {
                        "fill": undefined,
                        "stokeWidth": "2px",
                        "stroke": undefined,
                      }
                    }
                    testing={true}
                    theme={Object {}}
                    tooltip=""
                    version="1.1"
                    viewBox="0 0 40 40"
                    visible={false}
                    width=""
                    xcss={null}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <svg
                      className="ui-triangle sc-bZQynM gQorj Triangle__SVGView-bGJaTC kCZOgc"
                      contentEditable={false}
                      direction="up"
                      disabled={false}
                      height=""
                      id=""
                      preserveAspectRatio="xMidYMid meet"
                      selected={false}
                      style={
                        Object {
                          "fill": undefined,
                          "stokeWidth": "2px",
                          "stroke": undefined,
                        }
                      }
                      version="1.1"
                      viewBox="0 0 40 40"
                      width=""
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <polygon
                        points="-3,35, 20,10 43,35"
                        style={
                          Object {
                            "stroke": "none",
                          }
                        }
                      />
                      <polygon
                        points="-3,35, 20,10 43,35, 20,10"
                        style={
                          Object {
                            "strokeLinecap": "square",
                            "strokeWidth": undefined,
                          }
                        }
                      />
                    </svg>
                  </Triangle__SVGView>
                </ThemeProvider>
              </Triangle>
            </Styled(Triangle)>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </ThemeProvider>
</ButtonDialog>
`;
